# bedrockpyrepl

./: README.md  pyproject.toml
src/bedrockpyrepl/: __init__.py  __main__.py
